--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,4 @@
-<h1>
-  {{title}}
-</h1>
-<app-price-list></app-price-list>
+<div class="ui text container">
+  <h1 class="ui dividing header">{{title}}</h1>
+  <app-price-list></app-price-list>
+</div>
