--- a/src/app/price-list/price-list.component.html
+++ b/src/app/price-list/price-list.component.html
@@ -1,3 +1,19 @@
 <div *ngFor='let p of prices'>
   <span>{{p.name}} = {{p.price}}</span>
 </div>
+<form class="form-inline">
+  <div class="form-group">
+    <input type="search" class="form-control" placeholder="Enter search string" #search>
+  </div>
+  <button class="btn btn-primary" (click)="doSearch(search.value)">Search</button>
+</form>
+
+<div class="ui middle aligned divided list">
+  <div class="item" *ngFor="let track of itunes.results">
+    <img class="ui avatar image" src="{{track.artworkUrl30}}">
+    <div class="content">
+      <a class="header" target="_blank" href="{{track.trackViewUrl}}">{{ track.trackName }}</a>
+      <div class="description">{{ track.artistName }}</div>
+    </div>
+  </div>
+</div>
