--- a/src/app/price-list/price-list.component.html
+++ b/src/app/price-list/price-list.component.html
@@ -7,9 +7,9 @@
   </div>
   <button class="btn btn-primary" (click)="doSearch(search.value)">Search</button>
 </form>
-
-<form class="form-inline">
-  <div class="form-group">
+<hr>
+<form class="ui form">
+  <div class="field">
     <input type="search" class="form-control" placeholder="Enter search string" [formControl]="searchField">
   </div>
 </form>
