--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,4 +1,12 @@
 <div class="ui text container">
+  <div class="ui menu">
+    <a class="item" [routerLinkActive]="['active']" [routerLink]="['home']">Home</a>
+    <div class="right menu">
+      <a class="item" [routerLinkActive]="['active']" [routerLink]="['search']">Search</a>
+      <a class="item">Help</a>
+    </div>
+  </div>
   <h1 class="ui dividing header">{{title}}</h1>
-  <app-price-list></app-price-list>
+
+  <router-outlet></router-outlet>
 </div>
