--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -2,7 +2,8 @@
   <div class="ui menu">
     <a class="item" [routerLinkActive]="['active']" [routerLink]="['home']">Home</a>
     <div class="right menu">
-      <a class="item" [routerLinkActive]="['active']" [routerLink]="['search']">Search</a>
+      <a class="item" [routerLinkActive]="['active']" [routerLink]="['shops']">Shops</a>
+      <a class="item" [routerLinkActive]="['active']" [routerLink]="['search']">Search</a>      
       <a class="item">Help</a>
     </div>
   </div>
