add shop detail component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,9 @@
 <div class="ui text container">
-  <div class="ui menu">
-    <a class="item" [routerLinkActive]="['active']" [routerLink]="['home']">Home</a>
+  <div class="ui inverted menu">
+    <a class="item" [routerLinkActive]="['active']" [routerLink]="['/home']">Home</a>
     <div class="right menu">
-      <a class="item" [routerLinkActive]="['active']" [routerLink]="['shops']">Shops</a>
-      <a class="item" [routerLinkActive]="['active']" [routerLink]="['search']">Search</a>      
+      <a class="item" [routerLinkActive]="['active']" [routerLink]="['/shops']">Shops</a>
+      <a class="item" [routerLinkActive]="['active']" [routerLink]="['/search']">Search</a>      
       <a class="item">Help</a>
     </div>
   </div>
