--- a/src/app/shop-list/shop-list.component.html
+++ b/src/app/shop-list/shop-list.component.html
@@ -1,15 +1,14 @@
 <p>
   shop-list works!
 </p>
-<button class="btn btn-primary" (click)="doSearch()">Search</button>
-<div class="text-center">
-  <p class="lead" *ngIf="loading">Loading...</p>
-</div>
+<button class="btn btn-primary" (click)="getAllShops()">Search</button>
 
-<div class="ui middle aligned divided list">
-  <div class="item" *ngFor="let shop of shops | async">
+<div class="ui active centered inline loader" *ngIf="loading"></div>
+
+<div class="ui middle aligned divided list" *ngIf="!loading">
+  <div class="item" *ngFor="let shop of shops">
     <div class="content">
-      <a class="header" target="_blank" href="{{shop.name}}">{{ shop.name }}</a>
+      <a class="header" [routerLink]="['/shop', shop.id]">{{ shop.name }}</a>
       <div class="description">{{ shop.description }}</div>
     </div>
   </div>
