add addShop function

--- a/src/app/shop-list/shop-list.component.html
+++ b/src/app/shop-list/shop-list.component.html
@@ -1,7 +1,9 @@
 <p>
   shop-list works!
 </p>
-<button class="btn btn-primary" (click)="getAllShops()">Search</button>
+<button class="ui button" (click)="getAllShops()">Search</button>
+
+<button class="ui primary button" [routerLink]="['/shop/new']">New</button>
 
 <div class="ui active centered inline loader" *ngIf="loading"></div>
 
