--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -3,6 +3,7 @@
     <a class="item" [routerLinkActive]="['active']" [routerLink]="['/home']">Home</a>
     <div class="right menu">
       <a class="item" [routerLinkActive]="['active']" [routerLink]="['/shops']">Shops</a>
+      <a class="item" [routerLinkActive]="['active']" [routerLink]="['/products']">Products</a>
       <a class="item" [routerLinkActive]="['active']" [routerLink]="['/search']">Search</a>      
       <a class="item">Help</a>
     </div>
