add jquery and semantic npm packages

--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -3,6 +3,7 @@
 </p>
 
 <button class="ui button" (click)="getAllProducts()">Search</button>
+<button class="ui button" (click)="onModal()">Modal</button>
 
 <div class="ui active centered inline loader" *ngIf="loading"></div>
 
