--- a/src/styles.css
+++ b/src/styles.css
@@ -1,4 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
-.container {
-    
+.ui.footer.segment {
+    margin: 5em 0em 0em;
+    padding: 5em 0em;
+}
+
+.main.container {
+    margin-top: 7em;
 }
