--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
-<div class="ui inverted menu">
+<div class="ui inverted menu fixed">
   <div class="ui container">    
-    <a class="item" [routerLinkActive]="['active']" [routerLink]="['/home']">Home</a>
+    <a class="item header" [routerLinkActive]="['active']" [routerLink]="['/home']">Home</a>
     <div class="right menu">
       <a class="item" [routerLinkActive]="['active']" [routerLink]="['/shops']">Shops</a>
       <a class="item" [routerLinkActive]="['active']" [routerLink]="['/products']">Products</a>
